[gd_scene load_steps=8 format=3 uid="uid://con75mguhyjab"]

[ext_resource type="Script" path="res://LevelControl/ending_menu.gd" id="1_do8nq"]
[ext_resource type="Texture2D" uid="uid://bpa855k6f8i2n" path="res://Graphics/Menus/EndMenu.png" id="2_e13eg"]
[ext_resource type="AudioStream" uid="uid://dll8jyduii6v8" path="res://Audio/heckler sounds/boo with YOU SUCK.mp3" id="3_jwmj5"]
[ext_resource type="Texture2D" uid="uid://bm1kmeyae1dkq" path="res://Graphics/Menus/replay_icon.png" id="4_n20io"]
[ext_resource type="Texture2D" uid="uid://cjwdxoimr3eej" path="res://Graphics/Menus/next_level_icon.png" id="5_pc37a"]
[ext_resource type="Texture2D" uid="uid://dvdu2dx0u70s" path="res://Graphics/Menus/main_menu_icon.png" id="6_p4xcn"]

[sub_resource type="LabelSettings" id="LabelSettings_ij80x"]
font_size = 30

[node name="EndingMenu" type="Node2D"]
script = ExtResource("1_do8nq")

[node name="EndMenu" type="Sprite2D" parent="."]
position = Vector2(540, 960)
texture = ExtResource("2_e13eg")

[node name="Replay" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 337.0
offset_top = 1358.0
offset_right = 345.0
offset_bottom = 1366.0
rotation = 0.0061844
scale = Vector2(55.6198, 11.0606)

[node name="NextLevel" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 373.0
offset_top = 1508.0
offset_right = 381.0
offset_bottom = 1516.0
rotation = 0.0061844
scale = Vector2(48.516, 12.9343)

[node name="MainMenu" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 327.0
offset_top = 1678.0
offset_right = 335.0
offset_bottom = 1686.0
rotation = 0.0061844
scale = Vector2(55.6198, 10.9411)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jwmj5")
autoplay = true

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 346.0
offset_top = 1089.0
offset_right = 789.0
offset_bottom = 1262.0
columns = 2

[node name="JokesLanded" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Jokes Landed         "
label_settings = SubResource("LabelSettings_ij80x")

[node name="JokeFloat" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Float"
label_settings = SubResource("LabelSettings_ij80x")

[node name="DamageTaken" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Damage Taken"
label_settings = SubResource("LabelSettings_ij80x")

[node name="DamageFloat" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Float"
label_settings = SubResource("LabelSettings_ij80x")

[node name="Healing" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Healing"
label_settings = SubResource("LabelSettings_ij80x")

[node name="HealingFloat" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Float"
label_settings = SubResource("LabelSettings_ij80x")

[node name="ReplayIcon" type="Sprite2D" parent="."]
position = Vector2(230, 1406)
scale = Vector2(0.133333, 0.133333)
texture = ExtResource("4_n20io")

[node name="NextLevelIcon" type="Sprite2D" parent="."]
position = Vector2(234, 1557)
scale = Vector2(0.161111, 0.161111)
texture = ExtResource("5_pc37a")

[node name="MainMenuIcon" type="Sprite2D" parent="."]
position = Vector2(229, 1712)
scale = Vector2(0.135185, 0.135185)
texture = ExtResource("6_p4xcn")

[connection signal="button_down" from="Replay" to="." method="_on_replay_button_down"]
[connection signal="button_down" from="NextLevel" to="." method="_on_next_level_button_down"]
[connection signal="button_down" from="MainMenu" to="." method="_on_main_menu_button_down"]
